--- a/api-la-voz/package.json
+++ b/api-la-voz/package.json
@@ -1,20 +1,13 @@
 {
-  "name": "api-la-voz",
+  "name": "la-voz-frontend",
   "version": "1.0.0",
-  "description": "",
-  "main": "index.js",
+  "description": "Landing page con API en Vercel",
   "scripts": {
-    "start": "node index.js",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "dev": "next dev",
+    "build": "next build",
+    "start": "next start"
   },
-  "keywords": [],
-  "author": "",
-  "license": "ISC",
   "dependencies": {
-    "cors": "^2.8.5",
-    "dotenv": "^17.2.1",
-    "express": "^4.18.2",
     "mysql2": "^3.14.3"
   }
 }
-
